@@ -1596,6 +1596,10 @@ Vertical alignment should be one of wxALIGN\_TOP, wxALIGN\_CENTRE or wxALIGN\_BO
 
 Sets the height of the column labels.
 
+If \arg{height} equals to \textt{wxGRID\_AUTOSIZE} then height is calculated
+automatically so that no label is truncated. Note that this could be slow for a
+large table. This flag is new since wxWidgets version 2.8.8.
+
 
 
 \membersection{wxGrid::SetColLabelValue}\label{wxgridsetcollabelvalue}
@@ -1834,6 +1838,10 @@ Vertical alignment should be one of wxALIGN\_TOP, wxALIGN\_CENTRE or wxALIGN\_BO
 \func{void}{SetRowLabelSize}{\param{int }{width}}
 
 Sets the width of the row labels.
+
+If \arg{width} equals \textt{wxGRID\_AUTOSIZE} then width is calculated
+automatically so that no label is truncated. Note that this could be slow for a
+large table. This flag is new since wxWidgets version 2.8.8.
 
 
 
